Bugfix: The calendar controls uses a hidden input but it is visible in IE.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -156,7 +156,7 @@ nav li.notab a:focus, nav li.notab a:hover {
 #id_datepicker {
 	width: 0px;
 	padding: 0px;
-	border: none;
+	border: 0px solid white;
 }
 .ui-datepicker-trigger {
 	border: none;
